# esp32-smart-speaker

./: .gitignore  README.md  platformio.ini
data/: index.html  script.js  styles.css
esp32-smart-speaker-schema/: esp32-smart-speaker-schema.kicad_prl  esp32-smart-speaker-schema.kicad_pro  esp32-smart-speaker-schema.kicad_sch  wavelet_max.kicad_sch  wavelet_mini.kicad_sch  ~esp32-smart-speaker-schema.kicad_sch.lck
lib/SpotifyEsp32/: library.properties
lib/SpotifyEsp32/src/: SpotifyEsp32.cpp  SpotifyEsp32.h
src/: Config.h  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/ble/: BLEManager.cpp  BLEManager.h
src/core/: Speaker.cpp  Speaker.h
src/input/: Buttons.cpp  Buttons.h
src/mini-ble/: BLEManager.cpp  BLEManager.h
src/screens/: qr_setup.h
src/screens/splash/: splash.cpp  splash.h  wavelet_default.c  wavelet_default.h
src/spotify_controller/: Spotify.cpp  Spotify.h
src/storage/: PreferencesManager.cpp  PreferencesManager.h
src/web/: WebServer.cpp  WebServer.h
src/wifi/: WiFiManager.cpp
wavelet_app/: README.md  pubspec.yaml
wavelet_app/android/app/: build.gradle.kts
wavelet_app/android/app/src/main/: AndroidManifest.xml
wavelet_app/android/app/src/main/kotlin/com/example/wavelet_app/: MainActivity.kt
wavelet_app/android/app/src/main/res/values/: colors.xml
wavelet_app/android/app/src/main/res/values-night-v31/: styles.xml
wavelet_app/android/app/src/main/res/values-v31/: styles.xml
wavelet_app/android/app/src/profile/: AndroidManifest.xml
wavelet_app/ios/Runner/: Info.plist
wavelet_app/ios/Runner.xcodeproj/: project.pbxproj
wavelet_app/ios/Runner/Base.lproj/: LaunchScreen.storyboard
wavelet_app/lib/: main.dart
wavelet_app/lib/pages/: home_page.dart  login_page.dart  signup_page.dart  splash_page.dart
wavelet_app/lib/pages/initalpair/: BLE_template.md  inital-pair-searching_page.dart  inital-pair_page.dart  initial-pair-final_page.dart  initial-pair-found-devices_page.dart  initial-pair-naming_page.dart  initial-pair-permission_page.dart
wavelet_app/lib/pages/initalpair/devicespecific/: name-wavelet_page.dart
wavelet_app/lib/pages/initalpair/devicespecific/max/: max-speaker-code_page.dart  max-wifi-connect_page.dart
wavelet_app/lib/pages/initalpair/devicespecific/mini/: mini-qrcode-scan_page.dart  mini-wifi-connect_page.dart
wavelet_app/lib/theme/: colors.dart  theme.dart
wavelet_app/lib/util/: bottom-nav_bar.dart  device_card.dart  five_step_navigation.dart  permission_dialog.dart  progress_bar.dart  room-picker_pill.dart
wavelet_app/lib/util/function/: ble_scanner.dart
wavelet_app/test/: widget_test.dart
wavelet_app/windows/: CMakeLists.txt
wavelet_app/windows/runner/: Runner.rc  main.cpp
wavelet_mini_screens/: .gitignore  .mcp.json  project.xml  translations.xml
wavelet_mini_screens/components/: README.md
wavelet_mini_screens/fonts/: README.md
wavelet_mini_screens/images/: README.md
wavelet_mini_screens/screens/: README.md
wavelet_mini_screens/sim/: CMakeLists.txt  README.md  hal.c  hal.h  lv_conf_sdl.defaults  lv_conf_windows.defaults  main.c
wavelet_mini_screens/widgets/: README.md
webpage_iterations/: wavelet_dashboard_v2.html  wavelet_speaker_ui.html  wavelet_v4_faithful.html
